add delete and remove to images + update icon names

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="For Fagertuns gjester og eiere"/>
-    <link rel="icon" type="image/png" sizes="40x40" href="/logo.png"/>
+    <link rel="icon" type="image/png" sizes="40x40" href="/logo40.png"/>
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
     <meta name="theme-color" content="#000000"/>
     <link rel="apple-touch-icon" type="image/png" href="/logo-apple-touch.png"/>
